# rust-caller

./: Cargo.toml  LICENSE  README.md  api_result_test.json  caller.json
src/: caller_const.rs  caller_context.rs  config_loader.rs  http_method.rs  lib.rs
src/models/: api_item.rs  api_result.rs  authorization.rs  caller_config.rs  mod.rs  service_item.rs
src/utils/: config_loader.rs  mod.rs
tests/: config_test.rs
