[package]
name = "caller"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A WebApi Caller"
homepage = "https://github.com/lljxww/rust-caller"
repository = "https://github.com/lljxww/rust-caller"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.7"
tokio = { version = "1.39.3", features = ["full"] }
